--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "nest-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main.ts",
   "scripts": {
     "build": "rimraf dist && tsc",
     "start": "ts-node ./src/main.ts",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,13 @@
     "rxjs": "^6.5.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^2.0.3",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
